Implemented Build Job & General Cleaning